Revert the config to something less tasteless

--- a/etc/config.yml
+++ b/etc/config.yml
@@ -1,13 +1,16 @@
 ---
-interface: Local
+interface: Telnet
 brain: RandomWalk
+
+role: Val
+race: Dwa
 
 other_config:
     - etc/site_config.yml
 
 interface_options:
     Telnet:
-        server: nethack1.devnull.net
+        server: nethack.alt.org
         account: Interhack
         password: kool
     Local:
