--- a/etc/config.yml
+++ b/etc/config.yml
@@ -2,7 +2,8 @@
 interface: Local
 personality: ScoreWhore
 
-state_file: .TAEB.yml
+# uncomment this if you want TAEB to remember data between games. experimental!
+#state_file: .TAEB.yml
 
 role: Valkyrie
 race: Dwarf
