add a few more email/nick mappings (from interhack)

--- a/etc/nicks.yml
+++ b/etc/nicks.yml
@@ -12,3 +12,8 @@ stefanor@cox.net: sorear
 stephen@thorne.id.au: Jerub
 taeb@katron.org: arcanehl
 zaba@thorium.homeunix.org: Zaba
+jordanthelewis@gmail.com: toft
+william.h.gates.iii@gmail.com: weziman
+alexbobp@gmail.com: alexbobp
+joshj777@gmail.com: JoshJ
+marc.hartstein@alum.vassar.edu: marcmagus
