--- a/etc/config.yml
+++ b/etc/config.yml
@@ -1,11 +1,11 @@
 ---
 # This file contains TAEB configuration options that are useful for this ai.
 
-# Specify the default fight behavior. Possible values are Melee and EkimFight.
-# Note that currently EkimFight doesn't work very well, as we can't really
-# detect sleeping monsters.
-#fight_behavior: Melee
-
-# Branch to avoid, if any.
-# Possibles values: mines, dungeon, etc
-#avoid_branch: ""
+# fight_behavior - Which behavior to use for fighting monsters. Note that
+#                  EkimFight doesn't work well at the moment, since we can't
+#                  track whether a monster is sleeping.
+# avoid_branch   - Which dungeon branch to stay out of, if possible
+#ai_options:
+#    behavioral:
+#        fight_behavior: Melee # EkimFight
+#        avoid_branch: ""      # mines, dungeon
